src/sass/components/_modal.scss
/**
 * MODAL
 *
 * Sets the styles and animation behaviour of a modal popup window.
 */

@use '../abstracts/mixins' as mixin;

.modal {
    display: none;
    position: fixed;
    inset: 0;
    background: var(--modal-bg);
    justify-content: center;
    align-items: center;
    z-index: 1000;

    &.modal-show {
        display: flex;
    }

    &-content {
        @include mixin.size(
            $width: var(--modal-content-size),
            $height: var(--modal-content-size)
        );

        background: var(--modal-content-bg);
        padding: var(--modal-content-p);
        border-radius: var(--modal-content-radius);
        max-width: var(--modal-content-max-w);
        position: relative;
        color: var(--modal-content-clr);
        transform: translateY(-3.125rem);
        opacity: 0;
        transition: var(--modal-content-transition);

        iframe {
            width: 100%;
            height: 100%;
        }
    }

    &.modal-show .modal-content {
        transform: translateY(0);
        opacity: 1;
    }

    &.modal-hide .modal-content {
        transform: translateY(-3.125rem);
        opacity: 0;
    }

    &-close {
        @include mixin.position($type: absolute, $top: 0.5rem, $right: 1rem);

        transition: var(--modal-close-transition);
        background: none;
        border: none;
        color: var(--modal-close-btn-clr);
        font-size: var(--modal-content-fs);
        cursor: pointer;

        @include mixin.hover-focus {
            opacity: 0.5;
        }
    }
}

